Added comment in index file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/style.css" />
     <title>Document</title>
   </head>
+  <!--Just testing-->
   <body>
     <div class="container">
       <div class="navbar">
