--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <h1>Lambda</h1>
         <nav class="items">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Ingridients</a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">Reviews</a></li>
-            <li><a href="#">Reservation</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#ingridents">Ingridients</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#reviews">Reviews</a></li>
+            <li><a href="#reservation">Reservation</a></li>
           </ul>
         </nav>
       </div>
