--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#ingridents">Ingridients</a></li>
+            <li><a href="#ingredients">Ingredients</a></li>
             <li><a href="#menu">Menu</a></li>
             <li><a href="#reviews">Reviews</a></li>
             <li><a href="#reservation">Reservation</a></li>
